--- a/project/project/templates/global/html.html
+++ b/project/project/templates/global/html.html
@@ -18,6 +18,14 @@
   </head>
   <body>
 
+    <div id="menu" class="d-none d-lg-block flex-row">
+
+    </div>
+
+    <div id="menu-mobile" class="d-lg-none">
+
+    </div>
+
     <div id="content" class="container">
         {% block content %}{% endblock %}
     </div>
