--- a/project/public/templates/home.html
+++ b/project/public/templates/home.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+  <h1 style="margin-bottom:25px;">Derniers films sortis :</h1>
   <div class="row">
 
     {% for info in json.results %}
