--- a/project/project/static/css/main.css
+++ b/project/project/static/css/main.css
@@ -79,3 +79,33 @@ td, th {
     margin-top : 80px;
   }
 }
+
+.header-icon {
+  height: 50px;
+  width: 50px;
+  background-color: #2f98a9;
+  color: white;
+  margin-right: 10px;
+  font-size: 28px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: bottom;
+  line-height: 50px;
+}
+
+.card-header h2 {
+  display : inline-block;
+}
+
+.bloc {
+  width : 100%;
+  margin-bottom : 25px;
+}
+
+.togglable .fa-angle-down,
+.togglable .fa-angle-up {
+  display: inline-block;
+  font-size: 30px;
+  margin-left: auto;
+  padding-right: 20px;
+}
