--- a/project/public/templates/home.html
+++ b/project/public/templates/home.html
@@ -7,7 +7,7 @@
 
     {% for info in json.results %}
       <div class="movie_box col-sm-12 col-md-6 col-lg-4">
-        <a class="movie_desc_link" href="#">
+        <a class="movie_desc_link" href="/films/detail/{{info.id}}">
         {% if info.poster_path %}
           <img class="movie_img" src="{{IMG_PATH}}{{info.poster_path}}" alt="{{info.title}}">
         {% else %}
