--- a/project/project/templates/global/html.html
+++ b/project/project/templates/global/html.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{% block title %}IMDb Project{% endblock %}</title>
+    <title>{% block title %}{{TITRE}}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/bootstrap-edit.css" %}">
