--- a/project/public/static/css/detail.css
+++ b/project/public/static/css/detail.css
@@ -2,3 +2,9 @@
   display : flex;
   flex-direction : row;
 }
+
+@media screen and (max-width:767px) {
+  .detail_box {
+    flex-direction : column;
+  }
+}
