--- a/project/public/templates/home.html
+++ b/project/public/templates/home.html
@@ -14,7 +14,7 @@
           <img class="movie_img" src="{% static "img/movies/default.png" %}" alt="{{info.title}}">
         {% endif %}
         </a>
-        <p>{{info.title}}</p>
+        <p class="movie_title_home">{{info.title}}</p>
       </div>
 
     {% endfor %}
