--- a/project/project/templates/global/html.html
+++ b/project/project/templates/global/html.html
@@ -23,7 +23,7 @@
         {% if user.is_authenticated %}
           <a href="/"><li class="title-li"><h1>{{TITRE}}</h1></li></a>
           <a href="/films/recherche"><li>Films</li></a>
-          <li class="to-right" id="menu_account">Mon compte</li>
+          <li class="to-right" id="menu_account">Mon compte ({{user.get_username}})</li>
           <ul id="submenu_account">
             <a href="/auth/edit"><li>Mes informations</li></a>
             {% if user.is_superuser %}
@@ -52,7 +52,7 @@
           <a href="/" class="dropdown-item"><li>Accueil</li></a>
             <a href="/films/recherche" class="dropdown-item"><li>Films</li></a>
           {% if user.is_authenticated %}
-            <li id="mobile_account" class="dropdown-item">Mon compte</li>
+            <li id="mobile_account" class="dropdown-item">Mon compte ({{user.get_username}})</li>
           {% else %}
             <a href="/auth/create" class="dropdown-item"><li>Créer un compte</li></a>
           {% endif %}
