--- a/project/public/templates/search.html
+++ b/project/public/templates/search.html
@@ -37,7 +37,7 @@
         <img class="movie_img" src="{% static "img/movies/default.png" %}" alt="{{info.title}}">
       {% endif %}
       </a>
-      <p>{{info.title}}</p>
+      <p class="movie_title_home">{{info.title}}</p>
     </div>
 
   {% endfor %}
@@ -48,7 +48,7 @@
     <a class="movie_desc_link" href="#">
       <img class="movie_img" src="" alt="">
     </a>
-    <p></p>
+    <p class="movie_title_home"></p>
   </div>
 </div>
 
